--- a/src/app/features/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/features/admin-dashboard/admin-dashboard.component.html
@@ -26,7 +26,6 @@
             <th>Fecha de Nacimiento</th>
             <th>Correo Electrónico</th>
             <th>Número de Teléfono</th>
-            <th>Contraseña</th>
             <th>Dirección</th>
             <th>Localidad</th>
             <th>Rol</th>
@@ -38,10 +37,9 @@
             <td>{{ user.dni }}</td>
             <td>{{ user.fullName }}</td>
             <td>{{ user.sex }}</td>
-            <td>{{ formatDate(user.birthDate) }}</td>
+            <td>{{ (user.birthDate) | date: 'dd/MM/yyyy' }}</td>
             <td>{{ user.email }}</td>
             <td>{{ user.numberPhone || 'No disponible' }}</td>
-            <td>{{ user.password }}</td>
             <td>{{ user.address }}</td>
             <td>{{ user.locality?.name || 'No disponible' }}</td>
             <td>{{ user.role?.descriptionRole || 'No disponible' }}</td>
@@ -76,10 +74,11 @@
 
             <div class="form-group">
               <label for="email">Correo Electrónico</label>
-              <input type="email" id="email" name="email" [(ngModel)]="selectedUser.email" #email="ngModel" required
-                     placeholder="Ingresa el correo electrónico" />
+              <input type="email" id="email" name="email" [(ngModel)]="selectedUser.email" #emailRef="ngModel" required email placeholder="Ingresa tu correo electrónico" />
+              <div *ngIf="emailRef.invalid && emailRef.touched" class="error">
+                Correo electrónico inválido.
+              </div>
             </div>
-
             <div class="form-group">
               <label for="phone">Número de Teléfono</label>
               <input type="text" id="phone" name="phone" [(ngModel)]="selectedUser.numberPhone" #phone="ngModel" required
@@ -109,20 +108,6 @@
             <div class="form-group">
               <label for="birthdate">Fecha de Nacimiento</label>
               <input type="date" id="birthdate" name="birthdate" [(ngModel)]="selectedUser.birthDate" #birthdate="ngModel" required />
-            </div>
-
-            <div class="form-group">
-              <label for="password">Contraseña</label>
-              <input type="password" id="password" name="password" [(ngModel)]="selectedUser.password" #password="ngModel" required minlength="6" />
-            </div>
-
-            <div class="form-group">
-              <label for="confirmPassword">Confirmar Contraseña</label>
-              <input type="password" id="confirmPassword" name="confirmPassword" [(ngModel)]="selectedUser.confirmPassword"
-                     #confirmPassword="ngModel" required />
-              <div *ngIf="selectedUser.password !== selectedUser.confirmPassword" class="error">
-                Las contraseñas no coinciden.
-              </div>
             </div>
 
             <div class="form-group">
@@ -224,7 +209,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let pago of pagos">
-          <td>{{ pago.payDay | date: 'short' }}</td>
+          <td>{{ pago.payDay | date: 'shortDate' }}</td>
           <td>{{ pago.state }}</td>
           <td>{{ pago.totalPrice | currency }}</td>
           <td>{{ pago.membership?.type.description || 'Descripción no disponible' }}</td>
